--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <div class="container">
         <header>
             <nav>
-                <a href="">Home</a>
+                <img src="img/lambda-black.png" alt="strategy"><a href="">Home</a>
                 <a href="about.html">About</a>
                 <a href="">Products</a>
                 <a href="">Blog</a>
                 <a href="">Contact</a>
+            
             </nav>
+            <img src="img/jumbo.jpg" alt="strategy">
         </header>
         <section class="top-content">
             <div class="text-container">
